Add relatives from add ticket page

--- a/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
@@ -412,6 +412,8 @@ select.group: Seleccione el Grupo
 label.enableForTeacher: Habilitado Profesores
 label.enableInstitutions: Instituciones
 
+label.new.relative: Nuevo Familiar
+
 #Validation
 not.blank.name: Probando proband.
 not:
