--- a/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
@@ -360,6 +360,7 @@ label.ticket4: Boleta de Salida
 label.ticket5a: ______________________________
 label.ticket5: Firma
 label.ticket6: Firma del Encargado
+label.ticket7: Firma Docente
 label.ticketnota: Importante:  Que sea de su conocimiento que se impartirá materia nueva durante el transcurso de los exámenes, por ende es responsabilidad tanto del estudiante como del padre de familia en ponerse al día con dicha materia.
 
 #################     TEACHER     #################
