update de promedios y reportes

--- a/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
@@ -270,6 +270,7 @@ label.routes.club: Rutas Club
 label.students.by.route.club: Estudiantes por Ruta Clubes
 label.student.route: Transporte
 label.report.grades.by.group.course: Notas de Grupo por Materia
+label.students.route.by.group: Estudiantes en Ruta por Grupo
 
 label.penalties: Sanciones
 label.penalties.title: Administracion de Sanciones
