Reporte Quintos Mep

--- a/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
@@ -322,6 +322,7 @@ menu.qualifications.report: Notas de Periodo
 menu.qualifications.of.group.by.rubro: Calificaciones de Grupo por Rubro
 menu.detail.student.qualifications: Notas detalladas de Estudiante
 menu.averages.report: Mejores Promedios
+menu.mep.report: MEP Notas Presentación
 
 results.not.found: No se han encontrado resultados.
 
