update profesor admin acceso a info desde mod teacher reporte clubes

--- a/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
@@ -65,6 +65,8 @@ label.questionnaires.list: Lista de Cuestionarios
 label.attachment: Archivo adjunto
 
 label.teacher.default: Profesor Asignado
+label.teachers: Profesores
+label.teacher: Profesores
 label.include: Incluir
 
 label.period.listar: Lista de Periodos
@@ -325,6 +327,7 @@ menu.qualifications.of.group.by.rubro: Calificaciones de Grupo por Rubro
 menu.detail.student.qualifications: Notas detalladas de Estudiante
 menu.averages.report: Mejores Promedios
 menu.mep.report: MEP Notas Presentación
+menu.absences.report: Ausencias por grupo
 
 results.not.found: No se han encontrado resultados.
 
