TAIGA-13 Crear reporte de estudiantes de convocatorias, por grupo y materias

--- a/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
@@ -332,6 +332,9 @@ menu.detail.student.qualifications: Notas detalladas de Estudiante
 menu.averages.report: Mejores Promedios
 menu.mep.report: MEP Notas Presentación
 menu.absences.report: Ausencias por grupo
+convo.report: Convocatorias
+label.convocatorias: Convocatorias
+report.by: Reporte por
 
 results.not.found: No se han encontrado resultados.
 
