--- a/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/translations/messages.es.yml
@@ -71,6 +71,31 @@ label.teacher.default: Profesor Asignado
 label.teachers: Profesores
 label.teacher: Profesores
 label.include: Incluir
+label.execute: Ejecutar
+label.completed: Completado
+label.unrealized: No realizado
+
+label.create.migration: Nueva migración
+label.period.migration.list: Lista de Migración de Periodos
+label.period.migration.manage: Detalle de la Migración
+label.period.migration: Migración de Periodo
+source.period: Periodo Origen
+destination.period: Periodo Destino
+period.migration.status.1: Sin cerrar
+period.migration.status.2: Sin cerrar
+period.migration.status.3: Sin cerrar
+period.migration.status.4: Sin cerrar
+period.migration.status.5: Cerrada
+period.migration.error.no.actual: No puede crear una nueva migración sin tener definido el periodo actual
+period.migration.error.no.next.period: Antes de la migración necesita crear el siguiente periodo a utilizar
+period.migration.step.1: Crear los nuevos grupos
+period.migration.step.2: Mover los estudiantes a los nuevos grupos (Antes debe ejecutar el paso 1)
+period.migration.step.3: Crear las nuevas clases (Antes debe ejecutar el paso 1)
+period.migration.step.4: Asignar los profesores a los grupos y clases creados (Antes debe ejecutar los pasos 1 y 3)
+period.migration.step.5: Asignar el usuario principal a los grupos y clases creados (Antes debe ejecutar los pasos 1 y 3)
+period.migration.step.6: Crear las entradas de los cursos (Antes debe ejecutar los pasos 1 y 3)
+period.migration.step.7: Crear las entradas de los sub cursos (Antes debe ejecutar los pasos 1, 3 y 6)
+period.migration.step.execute.confirmation: Está seguro que desea ejecutar este paso de la migración?
 
 label.period.listar: Lista de Periodos
 label.period.new: Nuevo Periodo
